# flashvsr_sandbox

./: .gitignore  .gitmodules  README.md  README_SETUP.md  justfile  pyproject.toml
scripts/: download_model_v1.1.sh  flashvsr_env.py  install_block_sparse_attention.sh  test_inference.py
tests/: conftest.py  test_environment.py  test_flashvsr_env.py  test_inference.py
